--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -33,3 +33,13 @@ jobs:
 
       - name: View content
         run: ls -R
+
+      - name: Create GitHub release
+        id: create-new-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+
