--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -43,3 +43,7 @@ jobs:
           tag_name: ${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
 
+      - name: Archive site content
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: site.zip
