--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -47,3 +47,13 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           filename: site.zip
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+            asset_path: ./site.zip
+            asset_name: site-v${{ github.run_number }}.zip
+          asset_content_type: application/zip
