--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -7,15 +7,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+  
       - name: Install NPM dependencies
         run: npm install
+      
       - name: Build project assets
         run: npm run build
+      
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
           name: site-build
           path: .next/
+
+  
   distribute-project:
     name: Distribute Next.js project to GitHub Releases
     runs-on: ubuntu-latest
@@ -25,3 +30,30 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: site-build
+
+      - name: View content
+        run: ls -R
+
+      - name: Create GitHub release
+        id: create-new-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+
+      - name: Archive site content
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: site.zip
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+          asset_path: ./site.zip
+          asset_name: site-v${{ github.run_number }}.zip
+          asset_content_type: application/zip
