--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -57,3 +57,12 @@ jobs:
           asset_path: ./site.zip
           asset_name: site-v${{ github.run_number }}.zip
           asset_content_type: application/zip
+
+      - name: Publish to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: ${{ github.repository }}/webnext
+          tags: latest, ${{ github.run_number }}
