--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -58,6 +58,13 @@ jobs:
           asset_name: site-v${{ github.run_number }}.zip
           asset_content_type: application/zip
 
+  container-job:
+    name: Build container
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Publish to GitHub Packages
         uses: docker/build-push-action@v1
         with:
