--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -61,6 +61,7 @@ jobs:
   container-job:
     name: Build container
     runs-on: ubuntu-latest
+    needs: build-project
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
